--- a/Arch/i3.config
+++ b/Arch/i3.config
@@ -152,6 +152,7 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+hide_edge_borders smart
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
@@ -163,18 +164,6 @@ bar {
         status_command i3blocks
         position top
         
-        colors {
-        background #000000
-        statusline #ffffff
-        separator #666666
-
-        focused_workspace  #4c7899 #285577 #ffffff
-        active_workspace   #333333 #5f676a #ffffff
-        inactive_workspace #333333 #222222 #888888
-        urgent_workspace   #2f343a #900000 #ffffff
-        binding_mode       #2f343a #900000 #ffffff
-    }
-
 }
 
 for_window [class="^.*"] border pixel 1
@@ -185,4 +174,4 @@ exec_always --no-startup-id fcitx
 
 bindsym $mod+c exec --no-startup-id chromium
 bindsym $mod+f exec --no-startup-id nautilus
-bindsym $mod+t exec --no-startup-id termite
+bindsym $mod+t exec --no-startup-id xterm
