--- a/Arch/i3.config
+++ b/Arch/i3.config
@@ -171,7 +171,9 @@ for_window [class="^.*"] border pixel 1
 exec_always --no-startup-id feh --bg-scale /home/linh/Pictures/wallpaper/moer\ kaihen.jpg
 exec_always --no-startup-id i3blocks
 exec_always --no-startup-id fcitx
+exec_always xinput --set-prop 14 285 -0.2
 
 bindsym $mod+c exec --no-startup-id chromium
 bindsym $mod+f exec --no-startup-id nautilus
 bindsym $mod+t exec --no-startup-id xterm
+bindsym $mod+Control+s exec systemctl suspend
