--- a/Arch/i3blocks.conf
+++ b/Arch/i3blocks.conf
@@ -42,6 +42,12 @@ separator=true
 interval=1
 signal=10
 
+[battery]
+label=BAT
+command=echo "`cat /sys/class/power_supply/BAT1/capacity`% `cat /sys/class/power_supply/BAT1/status`"
+separator=true
+interval=5
+
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
@@ -97,11 +103,7 @@ separator=true
 # Battery indicator
 #
 # The battery instance defaults to 0.
-#[battery]
-#label=BAT
-#label=⚡
-#instance=1
-#interval=30
+
 
 # Date Time
 #
