--- a/Arch/i3.config
+++ b/Arch/i3.config
@@ -47,6 +47,11 @@ bindsym Control+Up exec --no-startup-id pamixer -i 2
 bindsym Control+Down exec --no-startup-id pamixer -d 2
 bindsym Control+0 exec --no-startup-id amixer set 'Master' toggle
 
+
+# brightness
+bindsym Control+bracketleft exec xbacklight -inc 10
+bindsym Control+bracketright exec xbacklight -dec 10
+
 # Screenshot
 bindsym Print exec scrot $HOME/Pictures/`date +%Y-%m-%d_%H:%M:%S`.png -e 'xclip -selection c -t image/png < $f'
 bindsym --release Shift+Print exec scrot -s $HOME/Pictures/`date +%Y-%m-%d_%H:%M:%S`.png -e 'xclip -selection c -t image/png < $f'
@@ -142,10 +147,10 @@ mode "resize" {
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
        
-        bindsym Left resize shrink width 1 px or 1 ppt
-        bindsym Down resize grow height 1 px or 1 ppt
-        bindsym Up resize shrink height 1 px or 1 ppt
-        bindsym Right resize grow width 1 px or 1 ppt
+        bindsym Left resize shrink width 4 px or 4 ppt
+        bindsym Down resize grow height 4 px or 4 ppt
+        bindsym Up resize shrink height 4 px or 4 ppt
+        bindsym Right resize grow width 4 px or 4 ppt
 
         # back to normal: Enter or Escape
         bindsym Escape mode "default"
@@ -175,5 +180,4 @@ exec_always xinput --set-prop 14 285 -0.2
 
 bindsym $mod+c exec --no-startup-id chromium
 bindsym $mod+f exec --no-startup-id nautilus
-bindsym $mod+t exec --no-startup-id xterm
-bindsym $mod+Control+s exec systemctl suspend
+bindsym $mod+t exec --no-startup-id urxvt
