--- a/Arch/i3.config
+++ b/Arch/i3.config
@@ -56,25 +56,20 @@ bindsym Control+bracketright exec xbacklight -dec 10
 bindsym Print exec scrot $HOME/Pictures/`date +%Y-%m-%d_%H:%M:%S`.png -e 'xclip -selection c -t image/png < $f'
 bindsym --release Shift+Print exec scrot -s $HOME/Pictures/`date +%Y-%m-%d_%H:%M:%S`.png -e 'xclip -selection c -t image/png < $f'
 
-# change focus
-bindsym $mod+j focus left
-bindsym $mod+k focus down
-bindsym $mod+l focus up
-bindsym $mod+semicolon focus right
+# Set floating window size
+floating_minimum_size 700 x 300
+floating_maximum_size 1000 x 700
 
-# alternatively, you can use the cursor keys:
+# change window focus
 bindsym $mod+Left focus left
 bindsym $mod+Down focus down
 bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
-# move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+# lock desktop
+bindsym $mod+Shift+l exec i3lock-next
 
-# alternatively, you can use the cursor keys:
+# move window position
 bindsym $mod+Shift+Left move left
 bindsym $mod+Shift+Down move down
 bindsym $mod+Shift+Up move up
@@ -176,6 +171,7 @@ for_window [class="^.*"] border pixel 1
 exec_always --no-startup-id feh --bg-scale /home/linh/Pictures/wallpaper/moer\ kaihen.jpg
 exec_always --no-startup-id i3blocks
 exec_always --no-startup-id fcitx
+exec_always --no-startup-id xrdb ~/.Xresources
 exec_always xinput --set-prop 14 285 -0.2
 
 bindsym $mod+c exec --no-startup-id chromium
