--- a/Arch/i3.config
+++ b/Arch/i3.config
@@ -172,7 +172,7 @@ exec_always --no-startup-id feh --bg-scale /home/linh/Pictures/wallpaper/moer\ k
 exec_always --no-startup-id i3blocks
 exec_always --no-startup-id fcitx
 exec_always --no-startup-id xrdb ~/.Xresources
-exec_always xinput --set-prop 14 285 -0.2
+exec_always --no-startup-id xinput --set-prop 14 285 -0.2
 
 bindsym $mod+c exec --no-startup-id chromium
 bindsym $mod+f exec --no-startup-id nautilus
