--- a/Arch/config_file/arch.conf
+++ b/Arch/config_file/arch.conf
@@ -2,4 +2,4 @@ title Arch Linux
 linux /vmlinuz-linux
 initrd /intel-ucode.img
 initrd /initramfs-linux.img
-options root=/dev/sda5 rw processor.max_cstate=5
+options root=/dev/sda5 rw
